clearRTT should clear entire RTT when scissor rect is not set

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • internal
    • Affects Version/s: internal
    • Component/s: javafx
    • Environment:

      fx-sandbox:metal branch

    • generic
    • os_x

      The Prism architecture maintains a pool of textures and reuses them when possible.
      These textures need to be cleared before being reused.
      In above scenario, scissor rect would be disabled.

            Assignee:
            Ambarish Rapte
            Reporter:
            Ambarish Rapte
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: