8311927: clearRTT should clear entire RTT when scissor rect is not set